The user menu will no longer be covered by page headers in skinny windows

--- a/scss/components/_user-menu.scss
+++ b/scss/components/_user-menu.scss
@@ -3,6 +3,7 @@
   position: absolute;
   right: 2rem;
   top: 1rem;
+  z-index: 1;
 
   header {
     font-size: 1.2em;
